Se agrega una referencia a un archivo de stilo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mi primer sitio de práctica</title>
 </head>
 <body>
-    <h1>Soy Vladimir Ibarra</h1>    
+    <h1>Soy Vladimir Ibarra</h1>
+    <p>Este es un cambio inicial</p>    
 </body>
 </html>
