--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer sitio de práctica</title>
+    <link rel="stylesheet" href="./styless.css">
 </head>
 <body>
     <h1>Soy Vladimir Ibarra</h1>
