Agrego la página de contactos y el enlace en index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Soy Vladimir Ibarra</h1>
     <p>Este es un cambio inicial</p>   
     <p>Este párrafo está en mi rama de desarrollo</p> 
+    <a href="./contactos.html">Contáctanos</a>
 </body>
 </html>
