Agrego una división a index.html en local

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <p>Este es un cambio inicial</p>   
     <p>Este párrafo está en mi rama de desarrollo</p> 
     <a href="./contactos.html">Contáctanos</a>
+
+    <div>
+        <p>Este párrafo está en la rama dev local</p>
+    </div>
 </body>
 </html>
