--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <p>Este es un cambio inicial</p>   
     <p>Este párrafo está en mi rama de desarrollo</p> 
     <a href="./contactos.html">Contáctanos</a>
-
+    <a href="./servicios.html">Servicios</a>
+    <a href="./nosotros.html">Nosotros</a>
+    <a href="./blog.html">Blog</a>
     <div>
         <p>Este párrafo está en la rama dev local</p>
     </div>
