Se corrige errores en el formulario de contactos.html

--- a/contactos.html
+++ b/contactos.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <form >
-        <input type="text">
-        <input type="text">
-        <button>Enviar</button>
+        <in<input type="text" title="Enter your text here" placeholder="Enter your text here">
+put type="text">
+        <inp<input type="text" title="Enter your text here" placeholder="Enter your text here">
+ut type="text">
+        <but<button type="submit">Enviar</button>
+ton>Enviar</button>
     </form>
 </body>
 </html>
